--- a/xray/CONTROL/docker-compose.yml
+++ b/xray/CONTROL/docker-compose.yml
@@ -1,34 +1,17 @@
-version: "3"
+version: "1"
 
-# More info at https://github.com/pi-hole/docker-pi-hole/ and https://github.com/cheehoong/asustor-apk-pihole
+# More info at https://hub.docker.com/r/teddysun/xray and https://github.com/cheehoong/asustor-apk-xray
 services:
-  pihole:
-    container_name: pihole
-    image: pihole/pihole:latest
-    network_mode: host
-#    ports:
-#      - "53:53/tcp"
-#      - "53:53/udp"
-#      - "67:67/udp"
-#      - "8080:80/udp"
-#      - "4443:443/tcp"
+  xray:
+    container_name: xray
+    image: teddysun/xray:latest
+    network_mode: bridge
+    ports:
+      - "9000:9000/tcp"
+#      - "9000:9000/udp"
     environment:
       TZ: 'Asia/Singapore'
-      ServerIP: 192.168.1.1
-#      VIRTUAL_HOST: 192.168.1.1
-      WEB_PORT: '3001'
-      WEBPASSWORD: 'admin'
 # Volumes store your data between container upgrades
     volumes:
-      # - './etc-pihole/:/etc/pihole/'
-      # - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
-      - '/share/Docker/pihole-docker/etc-pihole/:/etc/pihole/'
-      - '/share/Docker/pihole-docker/etc-dnsmasq.d/:/etc/dnsmasq.d/'
-    dns:
-      - 127.0.0.1
-      - 1.1.1.1
-    # Recommended but not required (DHCP needs NET_ADMIN)
-    # https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-#    cap_add:
-#      - NET_ADMIN
+      - '/share/Docker/xray-docker/:/etc/xray/'
     restart: unless-stopped
